# rust-protobuf-poc

./: Cargo.toml  README.md  build.rs
proto/: test.proto
src/: lib.rs  main.rs
