[package]
name = "rust-protobuf-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "2.4.1"
futures-lite = "2.3.0"
lapin = "2.3.1"
prost = "0.12.4"
tonic = "0.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11"
